[tool.poetry]
name = "santoku"
version = "201111.17"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = ">=1.16.50"
google-cloud-bigquery = ">=1.24.0"
jsonschema = ">=3.2.0"
mysql-connector-python = ">=8.0.5"
pandas = ">=1.0.3"
pyarrow = ">=0.17.1"
requests = ">=2.23.0"
slackclient = ">=2.5.0"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"
isort = "^5.7.0"
pytest = "^6.2.1"
moto = ">=1.3.14,<1.3.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
