[tool.poetry]
name = "santoku"
version = "220124.27"
description = "Custom Python wrapper around many third party APIs, including AWS, BigQuery, Slack and Salesforce."
authors = ["Data Science Team at WIRIS <info@wiris.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wiris/santoku"

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "~3.9"
boto3 = "^1.16.50"
google-cloud-bigquery = "^1.24.0"
jsonschema = "^3.2.0"
pandas = "^1.2.4"
slackclient = "^2.5.0"
tldextract = "^3.1.0"
mysql-connector-python = "^8.0.5"
requests = "^2.23.0"
awswrangler = "^2.13.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.812"
black = "^21.5b1"
isort = "^5.8.0"
moto = "1.3.14"
responses = "0.16.0"

[tool.pytest.ini_options]
addopts = "--exitfirst --capture=no"
log_auto_indent = "true"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
